--- a/public/assets/stylesheets/admin.css
+++ b/public/assets/stylesheets/admin.css
@@ -15,6 +15,8 @@ p { line-height: 1.5em; }
 .small { color: #666; font-size: 0.875em; }
 .large { font-size: 1.25em; }
 
+#tree{height: 560px; overflow-y: scroll;}
+
 /**
  * Nestable
  */
